

2004/09/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- db: ReadFromStream now uses a GWEN_BUFFER instead of a fixed char buffer.
  This removes unnecessary limits (and allows libchipcard to work)


2004-09-24   Christian Stimming <stimming@tuhh.de>

	* gwenpp/Makefile.am, tools/*/Makefile.am: Fix LIBADD flags so
	that all libraries and tools are forced to link against the
	currently compiled libgwen instead of the potentially installed
	one. Necessary for e.g. building new rpms.


2004/09/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- xml: added flag GWEN_XML_FLAGS_IGNORE_DESCR. This flag makes the XML code
  ignore <DESCR> tags when reading a file.
- args: fixed a silly bug (flags are binary, and flag help falsely contained
  two other flags). Normally this change would mean to break conmpatibility.
  However, since I'm the only one currently using GWEN_ARGS I will still
  increment SO_AGE for the next release.


2004/09/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_KeySpec_Dump now prints the status as well
- fixed a bug introduced yesterday
- msgengine: Now values can be given directly within an ELEM tag
  (like in <ELEM name="xyz" type="bytes">DirectValue</ELEM>).
  Before this change this only worked with unnamed elements.
- added status field to cryptkey


2004-09-22   Christian Stimming <stimming@tuhh.de>

	* src/os/posix/libloader.c: Fix problem with evaluation of
	dlerror() return value when translations are turned
	on. Effectively, the error evaluation during loading of libraries
	was totally broken since 2004-08-20, but is now fixed again.


2004/09/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- waitcallback.c: now reuses templates which are currently entered if
  they match the requested one
- msgengine.c: 